tests/traci/get_variable/Vehicle/errors/UnsupportedVariable/testclient_out.traci
TraCITestClient output file. Date: Sun Aug 05 13:42:36 2018


-> Command sent: <SimulationStep>:
.. Command acknowledged (2), [description: ]

-> Command sent: <GetVariable>:
  domID=164 varID=255 objID=v1
.. Answered with error to command (164), [description: Get Vehicle Variable: unsupported variable 0xff specified]

-> Command sent: <SimulationStep>:
.. Command acknowledged (2), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: ]
